check the wallet balance from the Address

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-INFURA_ID=f09fc916f9a046a8a62d9e2d00229b55
-CONTRACT_TOKEN=0x0c39c858f0F83c6DfFe5567828eAf85A060dd140
+INFURA_API_KEY=f09fc916f9a046a8a62d9e2d00229b55
+CCC_CONTRACT_ADDRESS=0x0c39c858f0F83c6DfFe5567828eAf85A060dd140
+
+Infura_URL_Polygone = https://polygon-mainnet.infura.io/v3/f09fc916f9a046a8a62d9e2d00229b55
+Infura_Private_Key = f2d328b3925f4d0d866f243048494a80
+MATICVIGIL_API_KEY=b9ecd5e49b75face126234ed0a3cf288ec99c0a6
+MATIC_MAINNET_RPC_URL=https://rpc-mainnet.maticvigil.com/v1/b9ecd5e49b75face126234ed0a3cf288ec99c0a6
+MATIC_MUMBAI_TESTNET_RPC_URL=https://rpc-mumbai.maticvigil.com/v1/b9ecd5e49b75face126234ed0a3cf288ec99c0a6
+MATIC_MAINNET_WEBSOCKET_URL=wss://rpc-mainnet.maticvigil.com/ws/v1/b9ecd5e49b75face126234ed0a3cf288ec99c0a6
+MATIC_MUMBAI_TESTNET_WEBSOCKET_URL=wss://rpc-mumbai.maticvigil.com/ws/v1/b9ecd5e49b75face126234ed0a3cf288ec99c0a6
