transection History API done and working on the other API

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ USDT_CONTRACT_ADDRESS=0xc2132d05d31c914a87c6611c10748aeb04b58e8f
 
 Infura_URL_Polygone = https://polygon-mainnet.infura.io/v3/b1f33be1c1844b388461c085b20c0ef9
 Infura_Private_Key = b1f33be1c1844b388461c085b20c0ef9
+
+
+POLYGONSCAN_API_KEY = TTFJD8I7X3PNU8FFDUQDEHJCCNFX9D8HUF
