--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ Infura_Private_Key = b1f33be1c1844b388461c085b20c0ef9
 
 
 POLYGONSCAN_API_KEY = TTFJD8I7X3PNU8FFDUQDEHJCCNFX9D8HUF
+MONGO_URI = mongodb+srv://usamahafiz8:i8BeInWRqzyEMVZ9@cluster0.ywes8ma.mongodb.net/
