uploaded the Game coin converor and fetch game coin from the DB

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ Infura_Private_Key = b1f33be1c1844b388461c085b20c0ef9
 
 POLYGONSCAN_API_KEY = TTFJD8I7X3PNU8FFDUQDEHJCCNFX9D8HUF
 MONGO_URI = mongodb+srv://usamahafiz8:i8BeInWRqzyEMVZ9@cluster0.ywes8ma.mongodb.net/
+
+
+
+# CCC Bank Wallet Address to Store 
+RECIPIENT_ADDRESS = 0xBba5B532be474eda51dea57A3F59c504Da907961 
